<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_task"
        android:textSize="24sp"
        android:layout_margin="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_first_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36sp"
        android:text="@string/simple_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_second" />

    <Button
        android:id="@+id/btn_first_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36sp"
        android:text="@string/notification_with_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_1" />

    <Button
        android:id="@+id/btn_first_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36sp"
        android:text="@string/notification_with_direct_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_2" />

    <Button
        android:id="@+id/btn_first_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36sp"
        android:text="@string/notification_with_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_3" />

</androidx.constraintlayout.widget.ConstraintLayout>